# Untitled-Block-Game

./: Cargo.toml
assets/shaders/: block.wgsl  mipmap.wgsl  occlusion.wgsl  selection.wgsl  test.wgsl
src/: lib.rs  main.rs
src/actor/: control.rs  mod.rs
src/ecs/: component.rs  mod.rs  query.rs  resource.rs  system.rs
src/game/: client.rs  input.rs  mod.rs
src/render/: batch.rs  binding.rs  camera.rs  canvas.rs  config.rs  mesh.rs  mod.rs  texture.rs  vertex.rs
src/util/: bounding.rs  collection.rs  coord.rs  erasure.rs  math.rs  mod.rs  transform.rs
src/world/: block.rs  generation.rs  meshing.rs  mod.rs  region.rs  render.rs
